# datafaker

./: LICENSE  README.md  pyproject.toml  setup.py
datafaker/: __init__.py  __main__.py  cli.py  generators.py
tests/: test_generators.py
